Before change job configuration

--- a/ProbeGateway/ProbeGateway.csproj
+++ b/ProbeGateway/ProbeGateway.csproj
@@ -71,6 +71,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileMaintenance\FileMaintenance.csproj">
+      <Project>{560f620a-adbd-4c12-8364-0b28ced1e055}</Project>
+      <Name>FileMaintenance</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
