--- a/PerceiverAPIService/App.config
+++ b/PerceiverAPIService/App.config
@@ -4,6 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
     </startup>
     <appSettings>
-      <add key="SleepInterval" value="1"/>
+      <add key="SleepInterval" value="1440"/>
+      <add key="EnableRestful" value="1"/>
+      <add key="APIUri" value ="http://10.112.179.196:8080/PerceiverAPI"/>
     </appSettings>
 </configuration>
