--- a/PerceiverAPIService/App.config
+++ b/PerceiverAPIService/App.config
@@ -6,6 +6,7 @@
     <appSettings>
       <add key="SleepInterval" value="1440"/>
       <add key="EnableRestful" value="1"/>
-      <add key="APIUri" value ="http://10.112.179.196:8080/PerceiverAPI"/>
+      <add key="APIUri" value ="net.tcp//10.112.179.196:8080/PerceiverAPI"/>
+      <add key="DBConnStr" value="Data Source=10.112.179.196;Initial Catalog=SCBCRP_ICDD; Persist Security Info=True;User ID=sa;Password=Scope2014;Connect Timeout=900;" />
     </appSettings>
 </configuration>
