--- a/PSSAKB/PSSAKB.csproj
+++ b/PSSAKB/PSSAKB.csproj
@@ -74,6 +74,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="configuration.cs" />
+    <Compile Include="Controls.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Controls.resx</DependentUpon>
+    </Compile>
     <Compile Include="mainModel.cs" />
     <Compile Include="mainviewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -95,6 +100,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Controls.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Controls.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
