--- a/PerceiverAPIService/PerceiverRestfulService.csproj
+++ b/PerceiverAPIService/PerceiverRestfulService.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
     <Compile Include="GlocalAPIs.cs" />
     <Compile Include="APIService.cs">
       <SubType>Component</SubType>
